P4ADEV-1744-add-api-finalize-sync-status
